Change z-index value to -1 to resolve browser-back-button reload display of image behind content

--- a/_scss/3-default-components/_index-banners.scss
+++ b/_scss/3-default-components/_index-banners.scss
@@ -2,6 +2,7 @@
   height: auto;
   position: fixed;
   width: 100%;
+  z-index: -1
 }
 
 .top-banner {
